# agentic-issue-tracker-app

./: .gitignore  README.md
adr/: ADR-001.md  ADR-002.md  ADR-003-Agentic Assistant.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b03398e1a19_create_issues_table.py  7ef8cd3349aa_create_issues_table.py  a1b2c3d4e5f6_add_created_at_index.py
backend/app/: main.py
backend/app/agent/: assistant_service.py  tools.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: database.py
backend/app/models/: issue.py
backend/app/repositories/: issue_repository.py
backend/app/routers/: assistant_router.py  issue_router.py
backend/app/schemas/: assistant.py  issue.py
backend/app/services/: issue_service.py
frontend/: README.md  angular.json  package.json  pnpm-lock.yaml
frontend/src/: styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/core/interceptors/: error.interceptor.ts
frontend/src/app/core/models/: issue.model.ts
frontend/src/app/core/services/: issue.service.ts
frontend/src/app/features/assistant/: assistant.service.ts
frontend/src/app/shared/components/error-message/: error-message.component.scss  error-message.component.ts
frontend/src/app/shared/components/loading-spinner/: loading-spinner.component.scss  loading-spinner.component.ts
frontend/src/app/shared/components/toast/: toast.component.html  toast.component.scss  toast.component.ts
frontend/src/app/shared/services/: toast.service.ts
(+20 files in other folders)
