[project]
name = "agentic-issue-tracker-app"
version = "0.1.0"
description = "An agentic issue tracker app with full CRUD functionality"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
